[gd_scene load_steps=3 format=3 uid="uid://c01xmvgbgrhbw"]

[ext_resource type="FontFile" uid="uid://c2mhiakww3nle" path="res://assets/fonts/Xolonium-Regular.ttf" id="1_ae7jf"]
[ext_resource type="Script" path="res://ui/canvas_layer.gd" id="1_t1t43"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_t1t43")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 900.0
offset_bottom = 2000.0
color = Color(0.423651, 0.423651, 0.423651, 1)

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 900.0
offset_bottom = 150.0
theme_override_fonts/font = ExtResource("1_ae7jf")
theme_override_font_sizes/font_size = 90
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 1300.0
offset_right = 150.0
offset_bottom = 1400.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_ae7jf")
theme_override_font_sizes/font_size = 76
text = "Start"

[node name="GameOverLabel" type="Label" parent="."]
offset_top = 700.0
offset_right = 900.0
offset_bottom = 1000.0
theme_override_fonts/font = ExtResource("1_ae7jf")
theme_override_font_sizes/font_size = 100
text = "Game Over!
Max Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="StartButton" to="." method="_on_start_button_button_down"]
